# sqlcanon

./: .pre-commit-config.yaml  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: INTEGRATIONS.md
examples/: README.md
examples/fastapi_service/: app.py  requirements.txt
examples/psycopg_and_asyncpg/: asyncpg_example.py  psycopg_example.py  requirements.txt
examples/sqlalchemy_hook/: app.py
scripts/: golden_referesh.py
src/sqlcanon/: __init__.py  protocols.py
src/sqlcanon/cli/: main.py
src/sqlcanon/config/: __init__.py  loader.py  model.py
src/sqlcanon/hashing/: __init__.py  sha256_hash.py
src/sqlcanon/parsing/: __init__.py  sqlparse_adapter.py
src/sqlcanon/passes/: __init__.py  base.py  case_keywords.py  normalise_literals.py  normalise_predicates.py  sort_in_list.py
tests/: README_COVERAGE.md  test_cli.py  test_config_loader.py  test_golden.py  test_loader_errors.py  test_normalization.py  test_pass_edges.py  test_passes.py  test_registry_edges.py  test_smoke.py
tests/bench/: test_bench_normalise.py
tests/golden/default/expected/: default_1_simple.sql  default_2_in_and.sql  default_3_or_safety.sql
tests/golden/default/inputs/: default_1_simple.sql  default_2_in_and.sql  default_3_or_safety.sql
tests/golden/exec/expected/: exec_1_in_sort.sql  exec_2_and_order.sql  exec_3_case_only.sql
tests/golden/exec/inputs/: exec_1_in_sort.sql  exec_3_case_only.sql
tests/property/: test_properties.py
