[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlcanon"
version = "0.1.0"
description = "SQL Query Canonicalizer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
     "typer>=0.12",
     "tomli>=2.0.1; python_version < '3.11'", 
     ]
authors = [{ name = "Justin McKeown" }]
license = { file = "LICENSE " }
classifiers = [
     "License :: OSI Approved :: Apache Software License",
]


[project.scripts]
sqlcanon = "sqlcanon.cli.main:run"

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "types-setuptools"]

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE", "NOTICE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
#addopts = "-q"
 addopts = "-q --cov=src/sqlcanon --cov-report=term-missing --cov-fail-under=85" #NOTE: if this is swapped for the above line we enforce test coverage of 85% 

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # basic errors, imports, pyupgrade

[tool.ruff.lint.isort]
known-first-party = ["sqlcanon"]  # helps import sorting for your package

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
ignore_missing_imports = true




